infra/deploy/environments/prod/kustomize/external_dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: prod
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.0
          args:
            - --provider=cloudflare
            - --log-level=trace
            - --log-format=text
            - --interval=3m
            - --events
            - --cloudflare-proxied
            - --source=ingress
            - --domain-filter=dinnerdonebetter.com
            - --cloudflare-dns-records-per-page=5000
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
