infra/deploy/environments/prod/kustomize/otel_collector.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-collector
  labels:
    app: dinner-done-better-infra
    app.kubernetes.io/name: dinner-done-better-infra
spec:
  selector:
    matchLabels:
      app: dinner-done-better-infra
      app.kubernetes.io/name: dinner-done-better-infra
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-infra
        app.kubernetes.io/name: dinner-done-better-infra
    spec:
      containers:
        - name: opentelemetry-collector
          image: otel/opentelemetry-collector-contrib:0.115.1
          command:
            - "/otelcol-contrib"
            - "--config"
            - "/conf/config.yaml"
          ports:
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 13133
              name: health
          volumeMounts:
            - name: opentelemetry-config
              mountPath: /conf
      volumes:
        # this volume contains the configuration file for the OTel collector.
        - name: opentelemetry-config
          configMap:
            name: opentelemetry-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-svc
  labels:
    app: dinner-done-better-infra
    app.kubernetes.io/name: dinner-done-better-infra
spec:
  selector:
    app: dinner-done-better-infra
    app.kubernetes.io/name: dinner-done-better-infra
  ports:
    - name: otlp-grpc
      port: 4317
      protocol: TCP
      targetPort: otlp-grpc
    - name: health
      port: 13133
      protocol: TCP
      targetPort: health
  type: ClusterIP
---
