infra/deploy/environments/prod/kustomize/root_site_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dinner-done-better-root-site-svc
  labels:
    app: dinner-done-better-root-site
    app.kubernetes.io/name: dinner-done-better-root-site
spec:
  selector:
    app.kubernetes.io/name: dinner-done-better-root-site
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
---
