infra/deploy/environments/prod/kustomize/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dinner-done-better-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    external-dns.alpha.kubernetes.io/hostname: "api.dinnerdonebetter.com,http-api.dinnerdonebetter.com,admin.dinnerdonebetter.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  tls:
    - hosts:
        - api.dinnerdonebetter.com
        - http-api.dinnerdonebetter.com
        - admin.dinnerdonebetter.com
      secretName: dinner-done-better-cert
  rules:
    - host: "api.dinnerdonebetter.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dinner-done-better-api-svc
                port:
                  number: 8001
    - host: "http-api.dinnerdonebetter.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dinner-done-better-api-svc
                port:
                  number: 8000
    - host: "admin.dinnerdonebetter.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dinner-done-better-admin-webapp-svc
                port:
                  number: 8888
---
